# ovena-backend

./: .bandit  .flake8  .gitignore  ARCHITECTURE_BLUEPRINT.md  DESIGN_DOC.md  Dockerfile  LICENSE  PAYMENTS_DEPENDENCY_GRAPH.md  PAYMENTS_MIGRATION_AND_SECURITY_PLAN.md  POST_ONBOARDING_UPDATE_APIS.md  README.md  TESTS_PAYMENTS_DRIVER.md  docker-compose.yaml  entrypoint.sh  features.md  main.py  pyproject.toml  pytest.ini  requirements.txt  sub.txt
accounts/: README.md  authenication_check.csv  mod.py  models.py  serializer.py  serializers.py  signals.py  tests.py  urls.py
addresses/: README.md  events.py  models.py  serializers.py  tests.py
admin_api/: models.py  serializers.py  tasks.py  urls.py  views.py
api/: routing.py  urls.py  views.py
authflow/: README.md  apps.py  authentication.py  decorators.py  features.py  permissions.py  schema.py  services.py  storage_backends.py  subscritpion.py
business_api/: README.md  apps.py  legacy_onboarding_urls.py  routers.py  urls.py  views.py
core/: asgi.py  settings.py  urls.py
coupons_discount/: README.md  apps.py  serializers.py  services.py  tests.py  urls.py  views.py
customer_api/: models.py  serializers.py  urls.py  views.py
driver_api/: README.md  admin.py  models.py  serializers.py  services.py  tasks.py  unified_bridge.py  urls.py  views.py
image/: mixin.py  services.py  utils.py  views.py
menu/: README.md  apps.py  consumer2.py  consumers.py  depeciated.txt  gis_utils.py  models.py  pagifications.py  payment_handlers.py  payment_services.py  payment_views.py  serializers.py  services.py  signals.py  (+5 more)
(+427 files in other folders)
