[project]
name = "ovena-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi>=25.1.0",
    "bcrypt>=5.0.0",
    "boto3>=1.42.96",
    "celery>=5.3.0",
    "channels>=4.0.0",
    "channels-redis>=4.1.0",
    "cloudinary>=1.44.2",
    "cryptography>=41.0.0",
    "daphne>=4.0.0",
    "django==5.1",
    "django-anymail[amazon-ses]>=15.0",
    "django-celery-beat>=2.5.0",
    "django-celery-results>=2.5.0",
    "django-cloudinary-storage>=0.3.0",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "django-phonenumber-field[phonenumbers]>=8.4.0",
    "django-prometheus>=2.4.1",
    "django-redis>=6.0.0",
    "django-storages[boto3]>=1.14.6",
    "djangorestframework>=3.17.1",
    "djangorestframework-gis>=1.0",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "drf-spectacular-sidecar>=2026.4.14",
    "factory-boy>=3.3.3",
    "geopy>=2.3.0",
    "google-auth>=2.49.2",
    "gunicorn>=25.3.0",
    "httpx>=0.28.1",
    "paystackapi>=2.1.3",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pycountry>=26.2.16",
    "pyjwt>=2.8.0",
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
    "pytest-factoryboy>=2.8.1",
    "python-decouple>=3.8",
    "python-ulid>=3.1.0",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "watchdog>=4.0",
    "whitenoise>=6.12.0",
]
